# tileport

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  tileport-plan.md
config/: default-config.toml  test-zone-layouts.toml
crates/tileport-cli/: Cargo.toml
crates/tileport-cli/src/: main.rs
crates/tileport-core/: Cargo.toml
crates/tileport-core/src/: command.rs  config.rs  lib.rs  monocle.rs  platform.rs  types.rs  workspace.rs  zone.rs
crates/tileport-macos/: Cargo.toml
crates/tileport-macos/src/: accessibility.rs  display.rs  hotkey.rs  lib.rs  permission.rs  window.rs
tileport-wm/: Cargo.toml
tileport-wm/src/: ipc.rs  main.rs  manager.rs
