[package]
name = "tileport-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tileport"
path = "src/main.rs"

[dependencies]
tileport-core = { path = "../tileport-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
